# rustmcsrv

./: .gitignore  Cargo.toml  README.md  build.rs
macroception/: Cargo.toml
macroception/src/: lib.rs
macrophilia/: Cargo.toml
macrophilia/src/: lib.rs
server_macros/: Cargo.toml
server_macros/src/: entity.rs  lib.rs  packet.rs  registry.rs
server_util/: Cargo.toml
server_util/src/: error.rs  lib.rs  take_forced.rs
src/: chat.rs  connection.rs  console.rs  data.rs  entity.rs  item.rs  main.rs  packet.rs  permission.rs  player.rs  player_data.rs  server.rs  state.rs
src/block/: block_state.rs  mod.rs
src/chat/: chat.rs  chat_message.rs  mod.rs
src/command/: argument.rs  command.rs  command_tree.rs  mod.rs
src/data/: nbt.rs  registry.rs
src/data/registry/: biome.rs  chat_type.rs  damage_type.rs  dimension_type.rs  trim_material.rs  trim_pattern.rs
src/data_types/: aabb.rs  angle.rs  block_position.rs  chunk.rs  data_types.rs  datapack.rs  death_location.rs  identifier.rs  identifier_array.rs  inferred_byte_array.rs  json_text_component.rs  mod.rs  nbt.rs  position.rs  prefixed_byte_array.rs  property_array.rs  rotation.rs  statistic_array.rs  tag.rs  text_component.rs  var_int.rs  var_long.rs  var_ushort.rs  vec_3d.rs
src/data_types/registry/: biome.rs  chat_type.rs  dimension_type.rs  mod.rs  registry.rs  wolf_variant.rs
src/data_types/tags/: mod.rs  tags.rs
src/entity/: aabb.rs  attribute.rs  entity.rs  entity_base.rs  entity_data.rs  living_entity.rs  mod.rs  potion_effect.rs
src/entity/entities/: mod.rs  parrot.rs  pig.rs  player.rs
src/entity/tags/: entity_base.rs  item.rs  mob.rs  mod.rs
src/event/: event.rs  event2.rs  mod.rs
src/event/events/: command.rs  mod.rs  on_disable.rs  on_enable.rs  player_login.rs
src/game/: gamemode.rs
src/nbt/tags/: item_base.rs  mod.rs
src/nbt/tags/entity/: brain_base.rs  breedable_base.rs  entity_base.rs  living_base.rs  lootable_base.rs  mob_base.rs  mod.rs  tameable_base.rs
src/packet/: configuration.rs  handshake.rs  login.rs  mod.rs  packet.rs  play.rs  status.rs
src/plugins/: plugin.rs
src/server/: mod.rs  server.rs  server_properties.rs
src/server/server_properties/: error.rs  mod.rs  ser.rs  server_properties.rs
src/state/: configuration_state.rs  handshake_state.rs  login_state.rs  mod.rs  play_state.rs  status_state.rs
src/world/: chunk.rs  chunk_loader.rs  generator_settings.rs  level_dat.rs  mod.rs  region.rs  world.rs
src/world/anvil/: anvil.rs  mod.rs  region.rs
