[package]
name = "rustmcsrv"
version = "0.1.0"
edition = "2021"



# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
server_util = { path = "./server_util" }
server_macros = { path = "./server_macros" }
async-stream = "0.3.5"
serde_json = "=1.0.1"

[dependencies.lazy_static]
version = "1.4.0"

[dependencies.async_executors]
version = "0.7.0"
features = ["threadpool"]

[dependencies.futures]
version = "0.3.30"
features = [
    "executor",
    "thread-pool"
]

[dependencies.uuid]
version = "1.7.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

#[dependencies.async-std]
#version = "1.6"
#features = ["attributes"]

[dependencies.tokio]
version = "1"
features = ["full"]
