[package]
name = "rustmcsrv"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "server_util",
    "server_macros",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
server_util = { path = "./server_util" }
server_macros = { path = "./server_macros" }

base64 = "0.22.0"
dashmap = "5.5.3"
reqwest = "0.11.26"
md5 = "0.7.0"
cesu8 = "1.1.0"
serde_path_to_error = "0.1.16"
lazy_static = "1.4.0"
rayon = "1.9.0"
rustyline = "14.0.0"
env_logger = "0.11.3"
log = "0.4.21"

[dependencies.quartz_nbt]
version = "0.2.9"
features = [
    "serde"
]

[dependencies.serde]
version = "1.0.197"
features = [
    "derive"
]

[dependencies.serde_repr]
version = "0.1.18"

[dependencies.serde_json]
version = "=1.0.1"

[dependencies.uuid]
version = "1.7.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[dependencies.tokio]
version = "1"
features = ["full"]
