[package]
name = "rustmcsrv"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "server_util",
    "server_macros", 
    "macroception",
    "macrophilia",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
reqwest = { version = "0.11.26", features = ["json", "blocking"] }

[dependencies]
server_util = { path = "./server_util" }
macroception = { path = "./macroception" }
server_macros = { path = "./server_macros" }
macrophilia = { path = "./macrophilia" }

base64 = "0.22.0"
dashmap = "5.5.3"
reqwest = { version = "0.11.26", features = ["json", "blocking"] }
md5 = "0.7.0"
cesu8 = "1.1.0"
serde_path_to_error = "0.1.16"
lazy_static = "1.4.0"
rayon = "1.9.0"
rustyline = "14.0.0"
env_logger = "0.11.3"
log = "0.4.21"
allocator-api2 = "0.2.16"
lru = "0.12.3"
libloading = "0.8.3"
itertools = "0.12.1"
seq-macro = "0.3.5"
chashmap = "2.2.2"
expand = "0.3.0"
cargo-expand = "1.0.88"
enum-as-inner = "0.6.0"
async-trait = "0.1.81"
maplit = "1.0.2"
lzma = "0.2.2"
chrono = "0.4.38"
convert_case = "0.6.0"
serde_tuple = "0.5.0"

[dependencies.valence_nbt]
version = "0.8.0"
features = [
    "serde",
    "binary",
]

[dependencies.hashbrown]
version = "0.14.3"
features = [
    "raw",
    "allocator-api2",
]

[dependencies.quartz_nbt]
version = "0.2.9"
features = [
    "serde"
]

[dependencies.serde]
version = "1.0.197"
features = [
    "derive",
    "rc",
]

[dependencies.serde_repr]
version = "0.1.18"

[dependencies.serde_json]
version = "=1.0.1"

[dependencies.uuid]
version = "1.7.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[dependencies.tokio]
version = "1"
features = ["full"]

