[package]
name = "macrophilia"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
proc-macro2 = "1.0"

[dependencies.syn]
version = "2.0"
features = [
    "full",
    "visit",
]

[dependencies.serde]
version = "1.0.197"
features = [
    "derive"
]

[dependencies.serde_json]
version = "=1.0.1"