[package]
name = "server_macros"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
proc-macro2 = "1.0"
server_util = { path = "../server_util" }
macroception = { path = "../macroception" }
base64 = "0.22.0"
lazy_static = "1.4.0"
seq-macro = "0.3.5"
convert_case = "0.6.0"
itertools = "0.13.0"
maplit = "1.0.2"


[dependencies.reqwest]
version = "0.12.5"
features = [
    "blocking",
    "json",
]

[dependencies.syn]
version = "2.0"
features = [
    "parsing",
]

[dependencies.serde]
version = "1.0.197"
features = [
    "derive"
]

[dependencies.serde_json]
version = "=1.0.1"
